--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
 	<link href="css/custom.css" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 	<!-- AdSense -->
-
+	<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7948401406873175"
+     crossorigin="anonymous"></script>
 </head>
 <body class="darktheme">
 	<!-- Navigation -->
