--- a/characters/rimuru/1.html
+++ b/characters/rimuru/1.html
@@ -19,7 +19,7 @@
 	<!-- Navigation -->
 	<nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-dark fixed-top">
 		<div class="container">
-			<a class="navbar-brand" href="../../index">IMDB</a>
+			<a class="navbar-brand" href="../../index">Isekai Memories</a>
 			<button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
 				<span class="navbar-toggler-icon"></span>
 			</button>
@@ -167,7 +167,7 @@
 <!-- /.container -->
 <!-- Footer -->
 <footer class="py-1 bg-dark">
-	<p class="m-0 text-center text-white">GCDatabase is not affliated with or endorsed by Netmarble | <a href="https://www.paypal.me/gcdatabase" style="color: #ff5500" target="_blank">Donations</a> | <a href="https://gcdatabase.com/specialthanks" style="color: #fcba03" target="_blank">Special Thanks</a></p>
+	<p class="m-0 text-center text-white">Isekai Memories Database is not affliated with or endorsed by Bandai Namco</a></p>
 </footer>
 <!-- Bootstrap core JavaScript -->
 <script src="../../lib/jquery/jquery.min.js"></script>
