test page updated

--- a/battleunits/rimuru/1.html
+++ b/battleunits/rimuru/1.html
@@ -59,9 +59,9 @@
 	<!-- Character Title & Icon -->
 	<div class="row">
 		<div class="mt-3 mb-3 ml-3 titlebox col-lg-6">
-			<img src="../../images/characters/rimuru/harmonizer_rimuru.png" class="pr-4" style="float:left" loading="lazy">
+			<img src="../../images/battleunits/rimuru/harmonizer_rimuru.png" class="pr-4" style="float:left" loading="lazy">
 			<div class="pt-3">
-				<h5 class="whitetext">&#91;Harmonizer of Monsters and Humans&#93;</h5><h4 class="whitetext"><b>Rimuru Tempest</b></h4>
+				<h5 class="whitetext"><b>&#91;Harmonizer of Monsters and Humans&#93;</b></h5><h4 class="whitetext"><b>Rimuru Tempest</b></h4>
 			</div>
 		</div>
 	</div>
@@ -117,8 +117,20 @@
 				<!-- SKill 1-->
 				<h5><b>Skill 1: Hydro Combat</b></h5>
 
-				<p style="color:#D5CDB7">Decreases a single target's Secret Skill Gauge by <span style="color:#03DD08">5%</span>.</p>
+				
 
+				<nav>
+					<div class="nav nav-tabs" id="nav-tab" role="tablist">
+						<a class="nav-item nav-link active" id="common1-tab" data-toggle="tab" href="#common1" role="tab" aria-controls="common1" aria-selected="true" style="color: #B5B5B7;">Common</a>
+						<a class="nav-item nav-link" id="extra1-tab" data-toggle="tab" href="#extra1" role="tab" aria-controls="extra1" aria-selected="false" style="color: #BC7BF0;">Extra</a>
+						<a class="nav-item nav-link" id="unique1-tab" data-toggle="tab" href="#unique1" role="tab" aria-controls="unique1" aria-selected="false" style="color: #C6A656;">Unique</a>
+					</div>
+				</nav>
+				<div class="tab-content" id="nav-tabContent">
+					<div class="tab-pane fade show active" id="common1" role="tabpanel" aria-labelledby="common1-tab"><p style="color:#D5CDB7">Decreases a single target's Secret Skill Gauge by <span style="color:#03DD08">5/6/7%</span>.<br>Points required: 50</p></div>
+					<div class="tab-pane fade" id="extra1" role="tabpanel" aria-labelledby="extra1-tab"><p style="color:#D5CDB7">Decreases a single target's Secret Skill Gauge by <span style="color:#03DD08">7/8/9%</span>.<br>Points required: 45</p></div>
+					<div class="tab-pane fade" id="unique1" role="tabpanel" aria-labelledby="unique1-tab"><p style="color:#D5CDB7">Decreases a single target's Secret Skill Gauge by <span style="color:#03DD08">9/11/13/15%</span>.<br>Points required: 40</p></div>
+				</div>
 
 				<h5><b>Skill 2: Heal Assist</b></h5>
 
@@ -132,7 +144,7 @@
 				<!-- SKill 1-->
 				<div class="row" style="display: flex">
 					<div class="col-12 col-sm-4 text-center">
-						<img src="../../images/characters/rimuru/test.png" loading="lazy">
+						<img src="../../images/battleunits/rimuru/harmonizer_rimuru_ult.png" loading="lazy">
 					</div>
 					<div class="col-sm-8 justify-content-center mt-3" style="align-items: center;">
 						<h5><b>Black Lightning</b></h5>
@@ -150,7 +162,7 @@
 			<div class="list-group mb-3">
 				<div class="list-group-item whitetext darktheme p-0">
 					<div class="container" style="justify-content: center; display: flex">
-						<img src="../../images/characters/rimuru/test.png" loading="lazy">
+						<img src="../../images/battleunits/rimuru/harmonizer_rimuru_ult.png" loading="lazy">
 					</div>
 					<h5 class="text-center"><b><u>Black Lightning</u></b></h5>
 					<p class="text-left">Unleashes an all-target water magic attack for 270% normal damage.</p>
