--- a/battleunits/rimuru/1.html
+++ b/battleunits/rimuru/1.html
@@ -14,7 +14,6 @@
 	<!-- Custom styles for this template -->
 	<link href="../../css/custom.css" rel="stylesheet">
 
-</head>
 <body class="darktheme">
 	<!-- Navigation -->
 	<nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-dark fixed-top">
@@ -111,19 +110,40 @@
 		<!-- /.End of Left Sidebar -->
 		<!-- Skills -->
 		<div class="col-lg-6 mb-4">
-			<h2 class="whitetext border-bottom" style="border-bottom-color: #1D2430;"><b>Battle Skills (Lv.1)</b></h2>
+			<h2 class="whitetext border-bottom"><b>Battle Skills</b></h2>
 
 			<div class="whitetext">
 				<!-- SKill 1-->
-				<h5><b>Skill 1: Hydro Combat</b></h5>
+				<div class="p-2" style="background-color: #1D2430;">
+					<h5><b>Skill 1: Hydro Combat</b></h5>
+					<div class="row">
+						<div class="col-12 col-lg-3 text-center my-auto p-0">
+							<img src="../../images/battleunits/rimuru/harmonizer_rimuru_1.png" loading="lazy">
+						</div>
+						<div class="col-lg-9">
+							<nav>
+								<div class="nav nav-tabs" id="nav-tab" role="tablist">
+									<a class="nav-item nav-link active" id="common1-tab" data-toggle="tab" href="#common1" role="tab" aria-controls="common1" aria-selected="true" style="color: #B5B5B7;">Common</a>
+									<a class="nav-item nav-link" id="extra1-tab" data-toggle="tab" href="#extra1" role="tab" aria-controls="extra1" aria-selected="false" style="color: #BC7BF0;">Extra</a>
+									<a class="nav-item nav-link" id="unique1-tab" data-toggle="tab" href="#unique1" role="tab" aria-controls="unique1" aria-selected="false" style="color: #C6A656;">Unique</a>
+								</div>
+							</nav>
+							<div class="tab-content" id="nav-tabContent">
+								<div class="tab-pane fade show active" id="common1" role="tabpanel" aria-labelledby="common1-tab"><p class="mb-0" style="color:#D5CDB7;">Decreases a single target's Secret Skill Gauge by <span style="color:#03DD08">5/6/7%</span>.<br>Points required: 50</p></div>
+								<div class="tab-pane fade" id="extra1" role="tabpanel" aria-labelledby="extra1-tab"><p class="mb-0" style="color:#D5CDB7">Decreases a single target's Secret Skill Gauge by <span style="color:#03DD08">7/8/9%</span>.<br>Points required: 45</p></div>
+								<div class="tab-pane fade" id="unique1" role="tabpanel" aria-labelledby="unique1-tab"><p class="mb-0" style="color:#D5CDB7">Decreases a single target's Secret Skill Gauge by <span style="color:#03DD08">9/11/13/15%</span>.<br>Points required: 40</p></div>
+							</div>
+						</div>
+					</div>
+				</div>
 
-				
+				<h5 class="mt-3"><b>Skill 2: Heal Assist</b></h5>
 
 				<nav>
 					<div class="nav nav-tabs" id="nav-tab" role="tablist">
-						<a class="nav-item nav-link active" id="common1-tab" data-toggle="tab" href="#common1" role="tab" aria-controls="common1" aria-selected="true" style="color: #B5B5B7;">Common</a>
-						<a class="nav-item nav-link" id="extra1-tab" data-toggle="tab" href="#extra1" role="tab" aria-controls="extra1" aria-selected="false" style="color: #BC7BF0;">Extra</a>
-						<a class="nav-item nav-link" id="unique1-tab" data-toggle="tab" href="#unique1" role="tab" aria-controls="unique1" aria-selected="false" style="color: #C6A656;">Unique</a>
+						<a class="nav-item nav-link active" id="common2-tab" data-toggle="tab" href="#common2" role="tab" aria-controls="common2" aria-selected="true" style="color: #B5B5B7;">Common</a>
+						<a class="nav-item nav-link" id="extra2-tab" data-toggle="tab" href="#extra2" role="tab" aria-controls="extra2" aria-selected="false" style="color: #BC7BF0;">Extra</a>
+						<a class="nav-item nav-link" id="unique2-tab" data-toggle="tab" href="#unique2" role="tab" aria-controls="unique2" aria-selected="false" style="color: #C6A656;">Unique</a>
 					</div>
 				</nav>
 				<div class="tab-content" id="nav-tabContent">
@@ -131,8 +151,6 @@
 					<div class="tab-pane fade" id="extra1" role="tabpanel" aria-labelledby="extra1-tab"><p style="color:#D5CDB7">Decreases a single target's Secret Skill Gauge by <span style="color:#03DD08">7/8/9%</span>.<br>Points required: 45</p></div>
 					<div class="tab-pane fade" id="unique1" role="tabpanel" aria-labelledby="unique1-tab"><p style="color:#D5CDB7">Decreases a single target's Secret Skill Gauge by <span style="color:#03DD08">9/11/13/15%</span>.<br>Points required: 40</p></div>
 				</div>
-
-				<h5><b>Skill 2: Heal Assist</b></h5>
 
 				<p style="color:#D5CDB7">Heals all allies' HP by <span style="color:#03DD08">15%</span>. Increases Soul of Divine Protection damage until the end of battle by <span style="color:#03DD08">5%</span> (Max: <span style="color:#03DD08">100%</span>).</p>
 
@@ -158,15 +176,11 @@
 		<!-- Right Sidebar -->
 		<div class="col-lg-3">
 			<!-- Passive/Unique -->
-			<h2 class="whitetext border-bottom" style="border-bottom-color: #1D2430;"><b>Secret Skills</b></h2>
-			<div class="list-group mb-3">
-				<div class="list-group-item whitetext darktheme p-0">
-					<div class="container" style="justify-content: center; display: flex">
-						<img src="../../images/battleunits/rimuru/harmonizer_rimuru_ult.png" loading="lazy">
-					</div>
-					<h5 class="text-center"><b><u>Black Lightning</u></b></h5>
-					<p class="text-left">Unleashes an all-target water magic attack for 270% normal damage.</p>
-				</div>
+			<h2 class="whitetext border-bottom text-center" style="border-bottom-color: #1D2430;"><b>Town Traits</b></h2>
+			
+			<div class="list-group whitetext">
+				<p class="mb-0">1. Ocean Supply Corps Base +30%</p>
+				<p>2. Laboratory +10%</p>
 			</div>
 			<!-- /.Passive/Unique -->
 			
