--- a/battleunits/rimuru/1.html
+++ b/battleunits/rimuru/1.html
@@ -13,6 +13,11 @@
 	<link href="../../lib/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 	<!-- Custom styles for this template -->
 	<link href="../../css/custom.css" rel="stylesheet">
+	<style type="text/css">
+		.nav-item.nav-link.active {
+			background-color: #212529;
+		}
+	</style>
 
 <body class="darktheme">
 	<!-- Navigation -->
@@ -110,15 +115,15 @@
 		<!-- /.End of Left Sidebar -->
 		<!-- Skills -->
 		<div class="col-lg-6 mb-4">
-			<h2 class="whitetext border-bottom"><b>Battle Skills</b></h2>
+			<h2 class="whitetext border-bottom pb-2"><b style="margin-left: -2px">Battle Skills</b></h2>
 
 			<div class="whitetext">
 				<!-- SKill 1-->
-				<div class="p-2" style="background-color: #1D2430;">
-					<h5><b>Skill 1: Hydro Combat</b></h5>
+				<div class="p-2" style="background-color: #1D2430; margin-top: 13px">
+					<h5 class="mb-3 ml-2"><b>Skill 1: Hydro Combat</b></h5>
 					<div class="row">
 						<div class="col-12 col-lg-3 text-center my-auto p-0">
-							<img src="../../images/battleunits/rimuru/harmonizer_rimuru_1.png" loading="lazy">
+							<img src="../../images/battleunits/rimuru/harmonizer_rimuru_1.png" class="ml-3" loading="lazy">
 						</div>
 						<div class="col-lg-9">
 							<nav>
