--- a/battleunits/rimuru/2.html
+++ b/battleunits/rimuru/2.html
@@ -62,17 +62,17 @@
 	<div class="container">
 		<!-- Character Title & Icon -->
 		<div class="row">
-			<div class="mt-3 mb-3 ml-3 titlebox col-lg-6">
-				<img src="../../images/battleunits/rimuru/harmonizer_rimuru.png" class="pr-4" style="float:left" loading="lazy">
-				<div class="pt-3">
-					<h5 class="whitetext"><b>&#91;Harmonizer of Monsters and Humans&#93;</b></h5><h4 class="whitetext"><b>Rimuru Tempest</b></h4>
-				</div>
+			<div class="mt-3 mb-3 titlebox col-lg-2 col-12 text-center">
+				<img src="../../images/battleunits/rimuru/harmonizer_rimuru.png" class="pr-4 ml-1 ml-lg-3" loading="lazy">
+			</div>
+			<div class="col-lg-6 my-auto col-12 ml-4 ml-lg-n4">
+				<h5 class="whitetext"><b>&#91;Harmonizer of Monsters and Humans&#93;</b></h5><h5 class="whitetext"><b>Rimuru Tempest</b></h5>
 			</div>
 		</div>
 		<!-- Content Row -->
 		<div class="row m-1">
 			<!-- Left Sidebar -->
-			<div class="col-lg-3 mt-1">
+			<div class="col-lg-3 mt-1" style="padding-left: 13px;">
 				<!-- Basic Info -->
 
 				<div class="row m-0">
@@ -118,7 +118,6 @@
 				<h2 class="whitetext border-bottom pb-2"><b style="margin-left: -2px">Battle Skills (Lv.1)</b></h2>
 
 				<div class="whitetext">
-					<!-- SKill 1-->
 					<div class="pl-2 pl-lg-0" style="margin-top: 13px">
 						<div class="row m-0">
 							<div class="col-12 col-lg-3 text-center my-auto p-0">
@@ -142,51 +141,44 @@
 							</div>
 						</div>
 					</div>
-
-					<h5 class="mt-3"><b>Skill 2: Heal Assist</b></h5>
-
-					<nav>
-						<div class="nav nav-tabs" id="nav-tab" role="tablist">
-							<a class="nav-item nav-link active" id="common2-tab" data-toggle="tab" href="#common2" role="tab" aria-controls="common2" aria-selected="true" style="color: #B5B5B7;">Common</a>
-							<a class="nav-item nav-link" id="extra2-tab" data-toggle="tab" href="#extra2" role="tab" aria-controls="extra2" aria-selected="false" style="color: #BC7BF0;">Extra</a>
-							<a class="nav-item nav-link" id="unique2-tab" data-toggle="tab" href="#unique2" role="tab" aria-controls="unique2" aria-selected="false" style="color: #C6A656;">Unique</a>
-						</div>
-					</nav>
-					<div class="tab-content" id="nav-tabContent">
-						<div class="tab-pane fade show active" id="common2" role="tabpanel" aria-labelledby="common2-tab"><p style="color:#D5CDB7">Decreases a single target's Secret Skill Gauge by <span style="color:#03DD08">5/6/7%</span>.<br>Points required: 50</p></div>
-						<div class="tab-pane fade" id="extra2" role="tabpanel" aria-labelledby="extra2-tab"><p style="color:#D5CDB7">Decreases a single target's Secret Skill Gauge by <span style="color:#03DD08">7/8/9%</span>.<br>Points required: 45</p></div>
-						<div class="tab-pane fade" id="unique2" role="tabpanel" aria-labelledby="unique2-tab"><p style="color:#D5CDB7">Decreases a single target's Secret Skill Gauge by <span style="color:#03DD08">9/11/13/15%</span>.<br>Points required: 40</p></div>
-					</div>
-
-					<p style="color:#D5CDB7">Heals all allies' HP by <span style="color:#03DD08">15%</span>. Increases Soul of Divine Protection damage until the end of battle by <span style="color:#03DD08">5%</span> (Max: <span style="color:#03DD08">100%</span>).</p>
-
 				</div>
 
 				<h2 class="whitetext border-bottom" style="border-bottom-color: #1D2430;"><b>Secret Skill</b></h2>
 
-				<div class="whitetext">
-					<!-- SKill 1-->
-					<div class="row" style="display: flex">
-						<div class="col-12 col-sm-4 text-center">
-							<img src="../../images/battleunits/rimuru/harmonizer_rimuru_ult.png" loading="lazy">
-						</div>
-						<div class="col-sm-8 justify-content-center mt-3" style="align-items: center;">
-							<h5><b>Black Lightning</b></h5>
-
-							<p class="mb-0 mt-3" style="color:#D5CDB7">Unleashes an all-target water magic attack for <span style="color:#03DD08">230/235/240/245/250/270%</span> normal damage.</p>
-						</div>
+				<div class="row m-0 whitetext mb-4">
+					<div class="col-12 col-lg-3 text-center my-auto p-0">
+						<img src="../../images/battleunits/rimuru/harmonizer_rimuru_ult.png" loading="lazy">
 					</div>
+					<div class="col-lg-9 my-auto px-lg-0 px-2">
+						<h5 class="mt-2"><b>Black Lightning</b></h5>
+						<p>Unleashes an all-target water magic attack for <span style="color:#03DD08">230/235/240/245/250/270%</span> normal damage.</p>
+					</div>
+				</div>
+
+				<h2 class="whitetext border-bottom" style="border-bottom-color: #1D2430;"><b>Traits</b></h2>
+
+				<div class="whitetext">
+					<h5 class="mt-2"><b>DEF UP (5★ Awaken x1)</b></h5>
+					<p>When affected by Critical Resistance UP, increases own DEF by 7% at start of turn (available in support formation).</p>
+
+					<h5 class="mt-2"><b>DEF UP (5★ Awaken x3)</b></h5>
+					<p>When affected by Critical Resistance UP, increases own DEF by 11% at start of turn (available in support formation).</p>
 				</div>
 
 			</div>
 			<!-- Right Sidebar -->
 			<div class="col-lg-3">
 				<!-- Passive/Unique -->
-				<h2 class="whitetext border-bottom text-center" style="border-bottom-color: #1D2430;"><b>Town Traits</b></h2>
+				<h2 class="whitetext border-bottom text-center pb-2" style="border-bottom-color: #1D2430;"><b>Town Traits</b></h2>
 
-				<div class="list-group whitetext">
-					<p class="mb-0">1. Ocean Supply Corps Base +30%</p>
-					<p>2. Laboratory +10%</p>
+				<div class="row m-0">
+					<div class="col-12 whitetext text-center mb-2"><b>Ocean Supply Corps Base</b></div>
+					<div class="col-6 text-center"><img src="../../images/icons/ocean_supply_corps_base.png" loading="lazy"></div>
+					<div class="col-6 whitetext mb-2 text-center" style="background-color: #1D2430"><h5 class="mt-2">+30%</h5></div>
+
+					<div class="col-12 whitetext text-center mb-2"><b>Laboratory</b></div>
+					<div class="col-6 text-center"><img src="../../images/icons/laboratory.png" loading="lazy"></div>
+					<div class="col-6 whitetext mb-2 text-center" style="background-color: #1D2430"><h5 class="mt-2">+10%</h5></div>
 				</div>
 				<!-- /.Passive/Unique -->
 
