--- a/battleunits/rimuru/2.html
+++ b/battleunits/rimuru/2.html
@@ -72,50 +72,45 @@
 		<!-- Content Row -->
 		<div class="row m-1">
 			<!-- Left Sidebar -->
-			<div class="col-lg-3 mt-1" style="padding-left: 13px;">
+			<div class="col-lg-3" style="padding-left: 13px;">
 				<!-- Basic Info -->
+				<div class="list-group mb-3">
+					<div class="list-group-item bg-dark">
+						<div class="row m-0">
+							<div class="col-6 whitetext mb-2 text-center" style="background-color: #2D323C"><h5 class="m-1">Rarity</h5></div>
+							<div class="col-6 text-center"><img class="pt-1" src="../../images/icons/5star.png" loading="lazy"></div>
 
-				<div class="row m-0">
-					<div class="col-6 whitetext mb-2 text-center" style="background-color: #1D2430"><h5 class="m-1">Rarity</h5></div>
-					<div class="col-6 text-center"><img class="pt-1" src="../../images/icons/5star.png" loading="lazy"></div>
+							<div class="col-6 whitetext mb-2 text-center" style="background-color: #2D323C"><h5 class="m-1">Growth</h5></div>
+							<div class="col-6 text-center whitetext"><h5 class="m-1">Defense</h5></div>
+						</div>
+						<div class="row m-0 justify-content-center">
+							<div class="col-3 text-center mb-2"><img src="../../images/icons/attribute_water.png" loading="lazy"></div>
+							<div class="col-3 text-center mb-2"><img src="../../images/icons/weapon_sword.png" loading="lazy"></div>
+							<div class="col-3 text-center mb-2"><img src="../../images/icons/magic.png" loading="lazy"></div>
+						</div>
 
-					<div class="col-6 whitetext mb-2 text-center" style="background-color: #1D2430"><h5 class="m-1">Growth</h5></div>
-					<div class="col-6 text-center whitetext"><h5 class="m-1">Defense</h5></div>
+
+						<div class="row m-0">
+							<div class="col-12 whitetext mb-2 text-center" style="background-color: #2D323C"><h5 class="m-1">STATS (MAX)</h5></div>
+
+							<div class="col-6 whitetext mb-2 text-center" style="background-color: #2D323C"><h5 class="m-1">Attack</h5></div>
+							<div class="col-6 text-center whitetext"><h5 class="m-1">2696</h5></div>
+
+							<div class="col-6 whitetext mb-2 text-center" style="background-color: #2D323C"><h5 class="m-1">HP</h5></div>
+							<div class="col-6 text-center whitetext"><h5 class="m-1">7091</h5></div>
+
+							<div class="col-6 whitetext mb-2 text-center" style="background-color: #2D323C"><h5 class="m-1">Defense</h5></div>
+							<div class="col-6 text-center whitetext"><h5 class="m-1">3643</h5></div>
+
+							<div class="col-6 whitetext mb-2 text-center" style="background-color: #2D323C"><h5 class="m-1">Output</h5></div>
+							<div class="col-6 text-center whitetext"><h5 class="m-1">150</h5></div>
+						</div>
+					</div>
 				</div>
-				<div class="row m-0 justify-content-center">
-					<div class="col-3 text-center mb-2"><img src="../../images/icons/attribute_water.png" loading="lazy"></div>
-					<div class="col-3 text-center mb-2"><img src="../../images/icons/weapon_sword.png" loading="lazy"></div>
-					<div class="col-3 text-center mb-2"><img src="../../images/icons/magic.png" loading="lazy"></div>
-				</div>
-
-
-				<div class="row m-0">
-					<div class="col-12 whitetext mb-2 text-center"><h5 class="m-1">STATS (MAX)</h5></div>
-
-					<div class="col-6 whitetext mb-2 text-center" style="background-color: #1D2430"><h5 class="m-1">Attack</h5></div>
-					<div class="col-6 text-center whitetext"><h5 class="m-1">2696</h5></div>
-
-					<div class="col-6 whitetext mb-2 text-center" style="background-color: #1D2430"><h5 class="m-1">HP</h5></div>
-					<div class="col-6 text-center whitetext"><h5 class="m-1">7091</h5></div>
-
-					<div class="col-6 whitetext mb-2 text-center" style="background-color: #1D2430"><h5 class="m-1">Defense</h5></div>
-					<div class="col-6 text-center whitetext"><h5 class="m-1">3643</h5></div>
-
-					<div class="col-6 whitetext mb-2 text-center" style="background-color: #1D2430"><h5 class="m-1">Output</h5></div>
-					<div class="col-6 text-center whitetext"><h5 class="m-1">150</h5></div>
-
-				</div>
-
-
-				<!-- /.Basic Info -->
-
-
 			</div>
-			<!-- /.Basic Info -->
-			<!-- /.End of Left Sidebar -->
-			<!-- Skills -->
-			<div class="col-lg-6 mb-4 mt-2 mt-lg-0">
-				<h2 class="whitetext border-bottom pb-2"><b style="margin-left: -2px">Battle Skills (Lv.1)</b></h2>
+
+			<div class="col-lg-6 mb-4 mt-2 mt-lg-0 mx-lg-0 bg-dark rounded" style="margin-left: 15px; margin-right: 15px;">
+				<h2 class="whitetext border-bottom pb-2 mt-2"><b style="margin-left: -2px">Battle Skills (Lv.1)</b></h2>
 
 				<div class="whitetext">
 					<div class="pl-2 pl-lg-0" style="margin-top: 13px">
@@ -145,7 +140,7 @@
 
 				<h2 class="whitetext border-bottom" style="border-bottom-color: #1D2430;"><b>Secret Skill</b></h2>
 
-				<div class="row m-0 whitetext mb-4">
+				<div class="row m-0 whitetext mb-3">
 					<div class="col-12 col-lg-3 text-center my-auto p-0">
 						<img src="../../images/battleunits/rimuru/harmonizer_rimuru_ult.png" loading="lazy">
 					</div>
@@ -157,7 +152,7 @@
 
 				<h2 class="whitetext border-bottom" style="border-bottom-color: #1D2430;"><b>Traits</b></h2>
 
-				<div class="whitetext">
+				<div class="whitetext mb-2">
 					<h5 class="mt-2"><b>DEF UP (5★ Awaken x1)</b></h5>
 					<p>When affected by Critical Resistance UP, increases own DEF by 7% at start of turn (available in support formation).</p>
 
@@ -169,16 +164,20 @@
 			<!-- Right Sidebar -->
 			<div class="col-lg-3">
 				<!-- Passive/Unique -->
-				<h2 class="whitetext border-bottom text-center pb-2" style="border-bottom-color: #1D2430;"><b>Town Traits</b></h2>
+				<div class="list-group mb-3">
+					<div class="list-group-item bg-dark">
+						<h2 class="whitetext border-bottom text-center pb-2" style="border-bottom-color: #1D2430; padding-bottom: 3px; margin-top: -5px;"><b>Town Traits</b></h2>
 
-				<div class="row m-0">
-					<div class="col-12 whitetext text-center mb-2"><b>Ocean Supply Corps Base</b></div>
-					<div class="col-6 text-center"><img src="../../images/icons/ocean_supply_corps_base.png" loading="lazy"></div>
-					<div class="col-6 whitetext mb-2 text-center" style="background-color: #1D2430"><h5 class="mt-2">+30%</h5></div>
+						<div class="row m-0">
+							<div class="col-12 whitetext text-center mb-2 p-0"><b>Ocean Supply Corps Base</b></div>
+							<div class="col-6 text-center"><img src="../../images/icons/ocean_supply_corps_base.png" loading="lazy"></div>
+							<div class="col-6 whitetext mb-2 text-center" style="background-color: #2D323C"><h5 class="mt-2">+30%</h5></div>
 
-					<div class="col-12 whitetext text-center mb-2"><b>Laboratory</b></div>
-					<div class="col-6 text-center"><img src="../../images/icons/laboratory.png" loading="lazy"></div>
-					<div class="col-6 whitetext mb-2 text-center" style="background-color: #1D2430"><h5 class="mt-2">+10%</h5></div>
+							<div class="col-12 whitetext text-center mb-2"><b>Laboratory</b></div>
+							<div class="col-6 text-center"><img src="../../images/icons/laboratory.png" loading="lazy"></div>
+							<div class="col-6 whitetext mb-2 text-center" style="background-color: #2D323C"><h5 class="mt-2">+10%</h5></div>
+						</div>
+					</div>
 				</div>
 			</div>
 		</div>
@@ -200,6 +199,6 @@
 			placement: 'right',
 			content: function () { return '<img src="' + $(this).data('img') + '" />'; }
 		});
-</script>
+	</script>
 </body>
 </html>
