--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 	<section class="mt-5">
 		<div class="container">
 			<div class="container">
-				<div class="jumbotron greytheme whitetext" style="padding: 1rem 1rem">
+				<div class="jumbotron bg-dark whitetext" style="padding: 1rem 1rem">
 					<h2 style="text-align: center;">Welcome to Isekai Memories Database!</h2>
 					<div class="d-flex justify-content-center">
 						<p style="text-align: center;">Follow the Twitter account <a href="https://twitter.com/isekaimemo_db"><span style="color:#ffa500">@isekaimemo_db</span></a> for site announcement and game updates.</p>
