--- a/battleunits/rimuru/2.html
+++ b/battleunits/rimuru/2.html
@@ -102,7 +102,7 @@
 							<div class="col-6 whitetext mb-2 text-center" style="background-color: #2D323C"><h5 class="m-1">Defense</h5></div>
 							<div class="col-6 text-center whitetext"><h5 class="m-1">3643</h5></div>
 
-							<div class="col-6 whitetext mb-2 text-center" style="background-color: #2D323C"><h5 class="m-1">Output</h5></div>
+							<div class="col-6 whitetext text-center" style="background-color: #2D323C"><h5 class="m-1">Output</h5></div>
 							<div class="col-6 text-center whitetext"><h5 class="m-1">150</h5></div>
 						</div>
 					</div>
