--- a/battleunits/rimuru/2.html
+++ b/battleunits/rimuru/2.html
@@ -132,7 +132,7 @@
 							</div>
 							<div class="col-lg-9 my-auto px-lg-0 px-2">
 								<h5 class="mt-2"><b>Skill 2: Heal Assist</b></h5>
-								<p>Heals all allies' HP by <span style="color:#03DD08">15%</span>. Increases <a data-toggle="popover-hover" data-img="../../images/icons/soul_of_divine_protection.png"><b style="color:#00d4fe">Soul of Divine Protection</b></a> damage until the end of battle by <span style="color:#03DD08">5%</span> (Max: <span style="color:#03DD08">100%</span>).</p>
+								<p>Heals all allies' HP by <span style="color:#03DD08">15%</span>. Increases <a data-toggle="popover-hover" data-img="../../images/icons/soul_of_divine_protection.png"><span style="color:#3A8AFF">Soul of Divine Protection</span></a> damage until the end of battle by <span style="color:#03DD08">5%</span> (Max: <span style="color:#03DD08">100%</span>).</p>
 							</div>
 						</div>
 					</div>
