--- a/battleunits/harmonizer_of_monsters_and_humans_rimuru_tempest.html
+++ b/battleunits/harmonizer_of_monsters_and_humans_rimuru_tempest.html
@@ -183,7 +183,7 @@
 		<p class="m-0 text-center text-white">Isekai Memories Database is not affliated with or endorsed by Bandai Namco</a></p>
 	</footer>
 	<!-- Bootstrap core JavaScript -->
-	<script src="../lib/jquery/jquery.min.js"></script>
+	<script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
 	<script src="../lib/bootstrap/js/bootstrap.min.js"></script>
 	<script>
 		$('[data-toggle="popover-hover"]').popover({
