--- a/battleunits/navigation.html
+++ b/battleunits/navigation.html
@@ -20,8 +20,8 @@
                         Useful Information
                     </a>
                     <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownPortfolio">
-                        <a class="dropdown-item whitetext" href="../cooking">Soul Converters</a>
-                        <a class="dropdown-item whitetext" href="../tierlist">Protector Overview</a>
+                        <a class="dropdown-item whitetext" href="../soulconverters">Soul Converters</a>
+                        <a class="dropdown-item whitetext" href="../protectoroverivew">Protector Overview</a>
                     </div>
                 </li>
             </ul>
