--- a/navigation.html
+++ b/navigation.html
@@ -1,27 +1,27 @@
 <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-dark fixed-top">
     <div class="container">
-        <a class="navbar-brand" href="../index">Isekai Memories</a>
+        <a class="navbar-brand" href="index">Isekai Memories</a>
         <button class="navbar-toggler navbar-toggler-right border-0" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarResponsive">
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item">
-                    <a class="nav-link" href="../index">Home</a>
+                    <a class="nav-link" href="index">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link active" href="../battleunits">Battle Characters</a>
+                    <a class="nav-link active" href="battleunits">Battle Characters</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="../protectorunits">Protection Characters</a>
+                    <a class="nav-link" href="protectorunits">Protection Characters</a>
                 </li>
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" data-toggle="dropdown">
                         Useful Information
                     </a>
                     <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownPortfolio">
-                        <a class="dropdown-item whitetext" href="../cooking">Soul Converters</a>
-                        <a class="dropdown-item whitetext" href="../tierlist">Protector Overview</a>
+                        <a class="dropdown-item whitetext" href="soulconverters">Soul Converters</a>
+                        <a class="dropdown-item whitetext" href="protectoroverivew">Protector Overview</a>
                     </div>
                 </li>
             </ul>
