--- a/index.html
+++ b/index.html
@@ -20,40 +20,8 @@
 </head>
 <body class="darktheme">
 	<!-- Navigation -->
-	<nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-dark fixed-top">
-		<div class="container">
-			<a class="navbar-brand" href="index">Isekai Memories Database</a>
-			<button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-				<span class="navbar-toggler-icon"></span>
-			</button>
-			<div class="collapse navbar-collapse" id="navbarResponsive">
-				<ul class="navbar-nav ml-auto">
-					<li class="nav-item">
-						<a class="nav-link active" href="index">Home</a>
-					</li>
-					<li class="nav-item dropdown">
-						<a class="nav-link dropdown-toggle" href="#" data-toggle="dropdown">
-							Characters
-						</a>
-						<div class="dropdown-menu dropdown-menu-right greytheme" aria-labelledby="navbarDropdownPortfolio">
-							<a class="dropdown-item whitetext" href="characters">Character List</a>
-						</div>
-					</li>
-					<li class="nav-item">
-						<a class="nav-link" href="gamenews">Game Information</a>
-					</li>
-					<li class="nav-item dropdown">
-						<a class="nav-link dropdown-toggle" href="#" data-toggle="dropdown">
-							Useful Information
-						</a>
-						<div class="dropdown-menu dropdown-menu-right greytheme" aria-labelledby="navbarDropdownPortfolio">
-							<a class="dropdown-item whitetext" href="">TBA</a>
-						</div>
-					</li>
-				</ul>
-			</div>
-		</div>
-	</nav>
+	<div id="nav-placeholder">
+	</div>
 	<!-- Page Content -->
 	<section class="mt-5">
 		<div class="container">
@@ -107,17 +75,6 @@
 				</div>
 				<div class="col-lg-6 mb-6 mb-3">
 					<div class="card greytheme">
-						<a href="https://ten-sura-m.bn-ent.net/en/" target=_blank>
-							<div>
-								<img src="images/officialsite.png" class="card-img" style="max-width: 100%; max-height: 100%; margin: auto; display: block;" loading="lazy" loading="lazy"></img>
-							</div>
-						</a>
-					</div>
-				</div>
-			</div>
-			<div class="row">
-				<div class="col-lg-6 mb-6 mb-3">
-					<div class="card greytheme">
 						<a href="https://www.facebook.com/slime.isekaimemories" target=_blank>
 							<div>
 								<img src="images/officialsite.png" class="card-img" style="max-width: 100%; max-height: 100%; margin: auto; display: block;" loading="lazy" loading="lazy"></img>
@@ -140,6 +97,10 @@
 <!-- Bootstrap core JavaScript -->
 <script src="lib/jquery/jquery.min.js"></script>
 <script src="lib/bootstrap/js/bootstrap.min.js"></script>
-
+<script>
+	$.get("navigation.html", function(data){
+		$("#nav-placeholder").replaceWith(data);
+	});
+</script>
 </body>
 </html>
