--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 	<p class="m-0 text-center text-white">Isekai Memories is not affliated with or endorsed by Bandai Namco</p>
 </footer>
 <!-- Bootstrap core JavaScript -->
-<script src="lib/jquery/jquery.min.js"></script>
+<script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
 <script src="lib/bootstrap/js/bootstrap.min.js"></script>
 <script>
 	$.get("navigation.html", function(data){
