--- a/battleunits.html
+++ b/battleunits.html
@@ -101,35 +101,49 @@
 						<td>5★</td>
 						<td>Physical</td>
 					</tr>
-					
+					<tr>
+						<td><a href="battleunits/harmonizer_of_monsters_and_humans_rimuru_tempest"><img src="images/battleunits/harmonizer_of_monsters_and_humans_rimuru_tempest/portrait.png" style="width:50px; height:50px;" loading="lazy"><br>Harmonizer of Monsters and Humans Rimuru Tempest</a></td>
+						<td>Water</td>
+						<td>5★</td>
+						<td>Magical</td>
+					</tr>
+					<tr>
+						<td><a href="battleunits/budding_of_deep_green_treyni"><img src="images/battleunits/budding_of_deep_green_treyni/portrait.png" style="width:50px; height:50px;" loading="lazy"><br>Budding of Deep Green Treyni</a></td>
+						<td>Earth</td>
+						<td>5★</td>
+						<td>Magical</td>
+					</tr>
+					<tr>
+						<td><a href="battleunits/conqueror_of_flames_shizue_izawa"><img src="images/battleunits/conqueror_of_flames_shizue_izawa/portrait.png" style="width:50px; height:50px;" loading="lazy"><br>Conqueror of Flames Shizue Izawa</a></td>
+						<td>Fire</td>
+						<td>5★</td>
+						<td>Physical</td>
+					</tr>
+					<tr>
+						<td><a href="battleunits/harmonizer_of_monsters_and_humans_rimuru_tempest"><img src="images/battleunits/harmonizer_of_monsters_and_humans_rimuru_tempest/portrait.png" style="width:50px; height:50px;" loading="lazy"><br>Harmonizer of Monsters and Humans Rimuru Tempest</a></td>
+						<td>Water</td>
+						<td>5★</td>
+						<td>Magical</td>
+					</tr>
+					<tr>
+						<td><a href="battleunits/budding_of_deep_green_treyni"><img src="images/battleunits/budding_of_deep_green_treyni/portrait.png" style="width:50px; height:50px;" loading="lazy"><br>Budding of Deep Green Treyni</a></td>
+						<td>Earth</td>
+						<td>5★</td>
+						<td>Magical</td>
+					</tr>
+					<tr>
+						<td><a href="battleunits/conqueror_of_flames_shizue_izawa"><img src="images/battleunits/conqueror_of_flames_shizue_izawa/portrait.png" style="width:50px; height:50px;" loading="lazy"><br>Conqueror of Flames Shizue Izawa</a></td>
+						<td>Fire</td>
+						<td>5★</td>
+						<td>Physical</td>
+					</tr>
 				</tbody>
 			</table>
 			
 		</div>
 		<!-- /.Row -->
 	</div>
-	<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-	<!-- Horizontal -->
-	<ins class="adsbygoogle"
-	style="display:block"
-	data-ad-client="ca-pub-7948401406873175"
-	data-ad-slot="1023841511"
-	data-ad-format="auto"
-	data-full-width-responsive="true"></ins>
-	<script>
-		(adsbygoogle = window.adsbygoogle || []).push({});
-	</script>
-	<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-	<!-- Horizontal -->
-	<ins class="adsbygoogle"
-	style="display:block"
-	data-ad-client="ca-pub-7948401406873175"
-	data-ad-slot="1023841511"
-	data-ad-format="auto"
-	data-full-width-responsive="true"></ins>
-	<script>
-		(adsbygoogle = window.adsbygoogle || []).push({});
-	</script>
+	
 	<!-- /.container -->
 	<!-- Footer -->
 	<footer class="py-1 bg-dark">
